--- a/src/components/entries/EntriesOne.astro
+++ b/src/components/entries/EntriesOne.astro
@@ -32,7 +32,7 @@ const { title, url, description, pubDate, author, image, tags } = Astro.props;
 
         <div class="mt-4 flex space-x-2">
           {
-            tags.map((tag) => (
+            tags.map((tag: any) => (
               <span class="text-xs font-medium text-black">{tag}</span>
             ))
           }
