--- a/src/components/global/Navigation.astro
+++ b/src/components/global/Navigation.astro
@@ -2,7 +2,7 @@
   class=" "
 
 >
-  <div class=" px-8 md:px-12 mx-auto max-w-7xl py-2  lg:px-32 text-xs">
+  <div class=" px-8 md:px-12 mx-auto max-w-7xl py-2  lg:px-32 text-lg">
     <div
       x-data="{ open: false }"
       class="relative flex flex-col w-full  mx-auto   rounded-xl md:rounded-full md:items-center md:justify-between md:flex-row "
@@ -15,7 +15,7 @@
           href="/"
         >
 
-         microblog
+         cool guy having chill day
         </a>
         <button
           @click="open = !open"
@@ -51,23 +51,14 @@
         <ul
           class="space-y-2 list-none md:space-y-0 md:ml-auto items-center md:inline-flex justify-center text-center md:text-left gap-3"
         >
-
-          <li>
-            <a
-              href="https://lexingtonthemes.com/"
-              class=" text-black hover:text-blue-500"
-            >
-              Other Themes
-            </a>
-          </li>
-          <li>
-            <a
-              href="https://github.com/michael-andreuzza/microblog"
-              class="py-1.5 px-4 border focus:ring-2 h-8  rounded-full border-transparent bg-black hover:bg-black/10 text-white duration-200 focus:ring-offset-2 focus:ring-white hover:text-black inline-flex items-center justify-center ring-1 ring-transparent lg:ml-auto"
-            >
-             GitHub
-            </a>
-          </li>
+            <li>
+                <a
+                        class=" text-black hover:text-blue-500"
+                >
+                    a blog
+                </a>
+            </li>
+            <li>
         </ul>
       </nav>
     </div>
