--- a/src/layouts/MarkdownPostLayout.astro
+++ b/src/layouts/MarkdownPostLayout.astro
@@ -7,7 +7,7 @@ const { frontmatter } = Astro.props;
     <div class="px-8 py-12 md:px-12 mx-auto lg:pt-24 max-w-7xl lg:px-32">
       <div class="lg:text-center">
         <img
-          class="lg:h-72 w-full  object-cover object-center"
+          class="lg w-full  object-cover object-center"
           src={frontmatter.image.url}
           alt={frontmatter.image.alt}
           />
