--- a/src/components/global/Navigation.astro
+++ b/src/components/global/Navigation.astro
@@ -12,7 +12,7 @@
       >
         <a
           class="text-black hover:text-zinc-500 items-center font-normal uppercase gap-3 inline-flex "
-          href="/"
+          href="/website"
         >
 
          cool guy having chill day
