--- a/src/layouts/MarkdownPostLayout.astro
+++ b/src/layouts/MarkdownPostLayout.astro
@@ -12,7 +12,7 @@ const { frontmatter } = Astro.props;
           alt={frontmatter.image.alt}
           />
          <div class="flex  flex-col md:flex-row mt-4 justify-between">
-            <p class="text-xs text-zinc-500 ">{frontmatter.pubDate.toString().slice(0, 10)} - Written by: {frontmatter.author}</p>
+            <p class="text-xs text-zinc-500 ">{frontmatter.pubDate.toString().slice(0, 10)} - Written by: {frontmatter.author} {frontmatter.image.info && ' - ' + frontmatter.image.info}</p>
            <div class="flex gap-3">
               {
                 frontmatter.tags.map((tag : any) => (
